--- a/FocusFinderApp/Views/_ViewImports.cshtml
+++ b/FocusFinderApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using FocusFinderApp
-@namespace FocusFinderApp.Pages
+@using FocusFinderApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
