--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -2,7 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<head>
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+</head>
+
+<div class="i-body-top body-top">
+    <div class="text-center">
+        <h1 class="display-4">FocusFinder</h1>
+    </div>
+</div>
+
+<div class="i-container">
+    <!-- Display three images in grid format -->
+    <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 1.jpg" alt="Study Image 1">
+    </div>
+    <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 2.jpg" alt="Study Image 2">
+    </div>
+    <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 3.webp" alt="Study Image 3">
+    </div>
+        <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 4.jpg" alt="Study Image 4">
+    </div>
+        <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 5.jpg" alt="Study Image 5">
+    </div>
+        <div class="i-study-pic-container glow-back">
+        <img src="~/images/Study image 6.jpg" alt="Study Image 6">
+    </div>
 </div>
