Created registr route on user controller and register html

--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
+<div class="register-button">
+    <a asp-controller="User" asp-action="Register" class="btn btn-primary">Register</a>
+</div>
+
 <div class="i-body-top body-top">
     <div class="text-center">
         <h1 class="display-4">FocusFinder</h1>
