User controller still in progress

--- a/FocusFinderApp/Views/Users/Register.cshtml
+++ b/FocusFinderApp/Views/Users/Register.cshtml
@@ -1,5 +1,5 @@
 @model FocusFinderApp.Models.User
-<form class="login-form" asp-action="Create" asp-controller="User" method="post">
+<form class="login-form" action="/Register" method="post">
     <fieldset>
         <legend>Register Now</legend>
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
