--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 
 <div class="register-button">
-    <a asp-controller="User" asp-action="Register" class="btn btn-primary">Register</a>
+    <a href="/Register" class="btn btn-primary">Register</a>
 </div>
 
 <div class="i-body-top body-top">
