--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -6,8 +6,20 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
-<div class="register-button">
-    <a href="/Register" class="btn btn-primary">Register</a>
+<div class="header-buttons">
+    @if (ViewBag.IsLoggedIn == true)
+    {
+        <div class="user-info">
+            <p>Welcome, @ViewBag.Username!</p>
+            <a href="/Profile" class="btn btn-primary">Profile</a>
+            <a href="/Logout" class="btn btn-danger">Logout</a>
+        </div>
+    }
+    else
+    {
+        <a href="/Login" class="btn btn-primary">Login</a>
+        <a href="/Register" class="btn btn-success">Register</a>
+    }
 </div>
 
 <div class="i-body-top body-top">
