Added profile route and basic html

--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="user-info">
             <p>Welcome, @ViewBag.Username!</p>
-            <a href="/Profile" class="btn btn-primary">Profile</a>
+            <a href="/Profile/@ViewBag.Username" class="btn btn-primary">Profile</a>
             <a href="/Logout" class="btn btn-danger">Logout</a>
         </div>
     }
