--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
     <div class="text-center">
         <h1 class="display-4">FocusFinder</h1>
         <form asp-controller="Location" asp-action="LocationByCity" method="get" class="search-form">
-            <input type="text" name="query" placeholder="Location" class="search-input" required>
+            <input type="text" name="city" placeholder="Location" class="search-input" required>
             <button type="submit" class="search-button">Search</button>
         </form>
     </div>
@@ -60,23 +60,3 @@
         <p>No locations found</p>
     }
 </div>
-
-@* <div class="i-container">
-    @if (Model?.Any() == true)
-    {
-        @foreach (var location in Model)
-        {
-            <div class="i-location-container glow-back">
-                <img src="@Url.Content(location.ImageURL)" alt="@location.LocationName">
-                <div class="i-location-info">
-                    <h2>@location.LocationName</h2>
-                    <p>@location.City</p>
-                </div>
-            </div>
-        }
-    }
-    else
-    {
-        <p>No locations found</p>
-    }
-</div> *@
