--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -50,6 +50,14 @@
                         <p>
                             Rating: @(location.Reviews?.Any() == true ? $"{Math.Round((decimal)(location.Reviews.Average(r => (double?)r.overallRating) ?? 0), 1)} ⭐" : "No ratings yet")
                         </p>
+
+                        @if (ViewBag.IsLoggedIn == true)
+                        {
+                            <form method="post" asp-controller="Bookmarks" asp-action="Add">
+                                <input type="hidden" name="locationId" value="@location.Id">
+                                <button type="submit" class="btn btn-primary">Bookmark</button>
+                            </form>
+                        }
                     </div>
                 </div>
             </a>
