--- a/FocusFinderApp/Views/Shared/_Layout.cshtml
+++ b/FocusFinderApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    @if (ViewData["Username"] != null)
+                    {
+                    <!-- Profile and Settings Links -->
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <!-- Ensure 'Username' is available in the view and holds the current username -->
+                            <a class="nav-link text-dark" asp-controller="Users" asp-action="Profile" asp-route-username="@ViewData["Username"]">Profile</a>
+                        </li>
+                    </ul>
+                    }
+
                 </div>
             </div>
         </nav>
