Button to add a visit created, but will just keep adding to the table. userId not linked yet, defaults to null

--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -17,9 +17,19 @@
 <!-- Main Location Container -->
 <div>
 
+    <!-- Mark as Visited -->
+    <div>
+        <h4>Have you been here?</h4>
+        <form asp-controller="Location" asp-action="AddVisit" method="post">
+            <input type="hidden" name="LocationId" value="@Model.Id" />
+            <button type="submit">I've visited!</button>
+        </form>
+        
+    </div>
+
     <!-- Bio -->
     <div> 
-        <p>Location Description:</p>
+        <h5>About @Model.LocationName</h5>
         @* <p>@ViewBag.Location.Description</p> TESTING *@
         <p>@Model.Description</p>
     </div>
@@ -44,7 +54,7 @@
             var reviews = Model.Reviews as IEnumerable<FocusFinderApp.Models.Review>;
         }
 
-        <h2>Reviews - Overall @ViewBag.AverageRating ⭐</h2>
+        <h5>Reviews - Overall @ViewBag.AverageRating ⭐</h5>
         @if (reviews?.Any() == true)
         {
             <ul>
@@ -75,7 +85,7 @@
 
     <!-- Address/Map << Advanced -->
     <div>
-        <p>Where even is it?</p>
+        <h5>Where even is it?</h5>
         <p>@Model.BuildingIdentifier @Model.StreetAddress</p>
         <p>@Model.City</p>
         <p>@Model.County</p>
@@ -84,7 +94,7 @@
 
     <!-- URL for Location's own webapage <<- Ideal/Advanced-->
     <div>
-        <p>Find out more information here:</p>
+        <h5>Find out more information here:</h5>
         <p>✨URL tbc✨</p>
         <p>(awaiting column in Locations table)</p>
     </div>
