--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -52,10 +52,19 @@
                         </p>
 
                         <!-- Bookmark Button Always Visible -->
-                        <form method="post" asp-controller="Bookmark" asp-action="Add">
-                            <input type="hidden" name="locationId" value="@location.Id">
-                            <button type="submit" class="btn btn-primary">Bookmark</button>
-                        </form>
+                        <div class="i-bookmark-container">
+                            @if (ViewBag.IsLoggedIn == true)
+                            {
+                                <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                    <input type="hidden" name="locationId" value="@location.Id">
+                                    <button type="submit" class="btn btn-primary">Bookmark</button>
+                                </form>
+                            }
+                            else 
+                            {
+                                <a href="/Login" class="btn btn-primary">Login to Bookmark</a>
+                            }
+                        </div>
                     </div>
                 </div>
             </a>
