--- a/FocusFinderApp/Views/Users/Bookmark.cshtml
+++ b/FocusFinderApp/Views/Users/Bookmark.cshtml
@@ -51,8 +51,9 @@
                                 Rating: @(location.Reviews?.Any() == true ? $"{Math.Round((decimal)(location.Reviews.Average(r => (double?)r.overallRating) ?? 0), 1)} ⭐" : "No ratings yet")
                             </p>
                                 <form method="post" asp-controller="Bookmark" asp-action="Remove">
-                                    <input type="hidden" name="bookmarkId" value="@bookmark.id">
-                                    <button type="submit" class="btn btn-danger" onclick="console.log('Form submitted');">Remove Bookmark</button>
+                                    <input type="hidden" name="locationId" value="@location.Id">
+                                    <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
+                                    <button type="submit" class="btn btn-danger">Remove from Bookmarks</button>
                                 </form>
                         </div>
                     </div>
