Added IsLoggedIn logic to ViewStart.cshtml to allow profile/register/logout buttons in on layout.cshtml and to work on every page

--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
-<div class="header-buttons">
+@* <div class="header-buttons">
     @if (ViewBag.IsLoggedIn == true)
     {
         <div class="user-info">
@@ -22,7 +22,7 @@
         <a href="/Login" class="btn btn-primary">Login</a>
         <a href="/Register" class="btn btn-success">Register</a>
     }
-</div>
+</div> *@
 
 <div class="i-body-top body-top">
     <div class="text-center">
