--- a/FocusFinderApp/Views/Shared/_Layout.cshtml
+++ b/FocusFinderApp/Views/Shared/_Layout.cshtml
@@ -27,8 +27,26 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                    @if (ViewData["Username"] != null)
-                    {
+                    <div class="header-buttons">
+                        @if (ViewBag.IsLoggedIn == true)
+                        {
+                            <div class="user-info">
+                                <p>Welcome, @ViewBag.Username!</p>
+                                <a href="/Profile/@ViewBag.Username" class="btn btn-primary">Profile</a>
+                                <a href="/Logout" class="btn btn-danger">Logout</a>
+                            </div>
+                        }
+                        else
+                        {
+                            <a href="/Login" class="btn btn-primary">Login</a>
+                            <a href="/Register" class="btn btn-success">Register</a>
+                        }
+                    </div>
+                    
+                    
+                    
+                    
+                    @* {
                     <!-- Profile and Settings Links -->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
@@ -36,7 +54,7 @@
                             <a class="nav-link text-dark" asp-controller="Users" asp-action="Profile" asp-route-username="@ViewData["Username"]">Profile</a>
                         </li>
                     </ul>
-                    }
+                    } *@
 
                 </div>
             </div>
