--- a/FocusFinderApp/wwwroot/css/home.css
+++ b/FocusFinderApp/wwwroot/css/home.css
@@ -57,7 +57,7 @@
 .i-study-pic-container {
     background-color: white;
     padding: 2vh;
-    border-radius: 2vh;
+    border-radius: 1.5rem;
     margin: 0 auto;
     height: 40vh;  /* Set a fixed height */
     width: 40vh;   /* Set a fixed width */
@@ -72,6 +72,7 @@
     max-height: 100%; /* Ensure image scales to fit container */
     object-fit: cover;  /* Crop image if necessary to fill container */
     object-position: center;  /* Center the image if cropped */
+    border-radius: 1.3rem;
 }
 
 /* Hover effects */
