Changed locations.cshtml to fix mark as visited not tracking session

--- a/FocusFinderApp/Views/_ViewStart.cshtml
+++ b/FocusFinderApp/Views/_ViewStart.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     Layout = "_Layout";
     
-    var userId = Context.Session.GetInt32("UserId");
-    ViewBag.IsLoggedIn = userId.HasValue; // Ensures it's always true/false
+    ViewBag.IsLoggedIn = Context.Session.GetInt32("UserId") != null;
     ViewBag.Username = Context.Session.GetString("Username");
 }
