--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -21,7 +21,7 @@
     <div>
         
         @{
-            if (ViewBag.IsLoggedIn == null)
+            if (!ViewBag.IsLoggedIn)
             {
                 <!-- Visit buttion - asks user to login -->
                 <a href="/Login" class="btn btn-primary">Login to mark as visited</a>
