--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
 <div class="i-body-top body-top">
     <div class="text-center">
         <h1 class="display-4">FocusFinder</h1>
-        <form asp-controller="Location" asp-action="LocationByCity" method="get" class="search-form">
-            <input type="text" name="city" placeholder="Location" class="search-input" required>
+        <form asp-controller="Location" asp-action="Search" method="get" class="search-form">
+            <input type="text" name="searchQuery" placeholder="Search by name or address" class="search-input" required>
             <button type="submit" class="search-button">Search</button>
         </form>
     </div>
